fix(header) make circles blue on mobile

--- a/site/web/app/themes/smart-city/resources/assets/styles/components/_page-header.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/components/_page-header.scss
@@ -58,7 +58,7 @@
 @include media-breakpoint-down(sm) {
   .page-header-secondary .circle {
     color: #fff;
-    background: #999;
+    background: #369;
     width: 5.5em;
     height: 5.5em;
     border: 2px solid #fff;
